@@ -1,6 +1,6 @@
+# $Id: Makefile.am,v 1.10 2012-11-11 00:44:37 karl Exp $
 # Makefile.am for texinfo/tp/tests.
-#
-# Copyright 2012 # Free Software Foundation, Inc.
+# Copyright 2012 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -55,23 +55,23 @@ all-local: htmlxref/htmlxref.cnf htmlxref-only_mono/htmlxref.cnf \
  sectioning/equivalent_nodes-noderename.cnf
 
 htmlxref/htmlxref.cnf: htmlxref/htmlxref.cnf-ref
-	${INSTALL_DATA} $< $@
+	${INSTALL_DATA} htmlxref/htmlxref.cnf-ref $@
 
 htmlxref-only_mono/htmlxref.cnf: htmlxref-only_mono/htmlxref.cnf-ref
-	${INSTALL_DATA} $< $@
+	${INSTALL_DATA} htmlxref-only_mono/htmlxref.cnf-ref $@
 
 htmlxref-only_split/htmlxref.cnf: htmlxref-only_split/htmlxref.cnf-ref
-	${INSTALL_DATA} $< $@
+	${INSTALL_DATA} htmlxref-only_split/htmlxref.cnf-ref $@
 
 htmlxref-only_split/.texinfo/htmlxref.cnf: \
  htmlxref-only_split/htmlxref.cnf-texinfo htmlxref-only_split/.texinfo
-	${INSTALL_DATA} $< $@
+	${INSTALL_DATA} htmlxref-only_split/htmlxref.cnf-texinfo $@
 
 htmlxref-only_split/.texinfo:
 	$(mkdir_p) $@
 
 sectioning/equivalent_nodes-noderename.cnf: sectioning/renamednodes.cnf-ref
-	${INSTALL_DATA} $< $@
+	${INSTALL_DATA} sectioning/renamednodes.cnf-ref $@
 
 EXTRA_DIST = run_parser_all.sh parser_tests.sh \
  $(TESTS) coverage_macro.texi
